--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,6 @@
-* {
-    margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
 .hand {
     background-color: black;
-    position: relative;
-    top: 50%;
-    left: 50%;
+    transform-origin: bottom;
+    border-radius: 10px;
+    opacity: 0.8;
 }
