--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,23 @@
+#root {
+    text-align: center;
+}
+
 .hand {
     background-color: black;
     transform-origin: bottom;
     border-radius: 10px;
     opacity: 0.8;
+}
+
+.button {
+    background-color: blue;
+    color: white;
+    padding: 5px 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.button:hover {
+    background-color: lightblue;
 }
